--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     />
     <link
       rel="stylesheet"
-      href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -21,28 +23,31 @@
   <body>
     <header>
       <div class="container">
-        <nav>
+        <nav class="menu-nav">
           <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
           <ul class="site-nav">
-            <li><a href="./index.html" class="link current">Студія</a></li>
-            <li>
+            <li class="item">
+              <a href="./index.html" class="link current">Студія</a>
+            </li>
+            <li class="item">
               <a href="./portfolio.html" class="link">Портфоліо</a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">Контакти</a>
             </li>
           </ul>
         </nav>
 
-        <div class="email">
+<ul class="email-tel"> 
+        <li class="email">
           <a href="mailto:info@devstudio.com" class="link"
             >info@devstudio.com</a
           >
-        </div>
-        <div class="tel">
+        </li>
+        <li class="tel">
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </div>
-      </div>
+        </li>
+      </ul>
     </header>
 
     <main>
@@ -55,28 +60,28 @@
 
       <section class="section fearure">
         <div class="container">
-          <ul>
-            <li>
+          <ul class="fearure-list">
+            <li class="item">
               <h3 class="fearures-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="fearures-text">
                 Ідейні міркування, i навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="fearures-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="fearures-text">
                 Завдання організації, особливо рамки i місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="fearures-title">ПЛАНУВАННЯ</h3>
               <p class="fearures-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="fearures-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="fearures-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -89,26 +94,24 @@
       <section class="section work">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul>
-            <li>
+          <ul class="work-list">
+            <li class="item">
               <img src="./img/box-1.jpg" alt="Розробка сайту" width="370" />
             </li>
-            <li>
-              <img
-                src="./img/box-2.jpg"
-                alt="Створення мобільної версії"
+            <li class="item" >
+              <img src="./img/box-2.jpg" alt="Створення мобільної версії"
                 width="370"
               />
-            </li>
-            <li><img src="./img/box-3.jpg" alt="Веб-дизайн" width="370" /></li>
+            </li >
+            <li class="item"><img src="./img/box-3.jpg" alt="Веб-дизайн" width="370" /></li>
           </ul>
         </div>
       </section>
       <section class="section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul>
-            <li>
+          <ul class="team-list">
+            <li class="item">
               <img
                 src="./img/team-card-1.jpg"
                 alt="Ігор Дем'яненко"
@@ -117,12 +120,12 @@
               <h3 class="team-name">Ігор Дем'яненко</h3>
               <p class="team-speciality">Product Designer</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./img/team-card-2.jpg" alt="Ольга Рєпіна" width="270" />
               <h3 class="team-name">Ольга Рєпіна</h3>
               <p class="team-speciality">Frontend Developer</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./img/team-card-3.jpg"
                 alt="Микола Тарасов"
@@ -131,7 +134,7 @@
               <h3 class="team-name">Микола Тарасов</h3>
               <p class="team-speciality">Marketing</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./img/team-card-4.jpg"
                 alt="Михайло Єрмаков"
