--- a/index.html
+++ b/index.html
@@ -38,16 +38,17 @@
           </ul>
         </nav>
 
-<ul class="email-tel"> 
-        <li class="email">
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="tel">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+        <ul class="email-tel">
+          <li class="email">
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="tel">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
@@ -98,12 +99,16 @@
             <li class="item">
               <img src="./img/box-1.jpg" alt="Розробка сайту" width="370" />
             </li>
-            <li class="item" >
-              <img src="./img/box-2.jpg" alt="Створення мобільної версії"
+            <li class="item">
+              <img
+                src="./img/box-2.jpg"
+                alt="Створення мобільної версії"
                 width="370"
               />
-            </li >
-            <li class="item"><img src="./img/box-3.jpg" alt="Веб-дизайн" width="370" /></li>
+            </li>
+            <li class="item">
+              <img src="./img/box-3.jpg" alt="Веб-дизайн" width="370" />
+            </li>
           </ul>
         </div>
       </section>
