--- a/index.html
+++ b/index.html
@@ -23,31 +23,33 @@
   <body>
     <header>
       <div class="container">
-        <nav class="menu-nav">
-          <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
-          <ul class="site-nav">
-            <li class="item">
-              <a href="./index.html" class="link current">Студія</a>
+        <div class="header-page">
+          <nav class="menu-nav">
+            <a href="/" class="logo"><span class="accent">Web</span>Studio</a>
+            <ul class="site-nav">
+              <li class="item">
+                <a href="./index.html" class="link current">Студія</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link">Портфоліо</a>
+              </li>
+              <li class="item">
+                <a href="" class="link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <ul class="contact-data">
+            <li class="email">
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="link">Портфоліо</a>
-            </li>
-            <li class="item">
-              <a href="" class="link">Контакти</a>
+            <li class="tel">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
           </ul>
-        </nav>
-
-        <ul class="email-tel">
-          <li class="email">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="tel">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
 
@@ -155,10 +157,12 @@
 
     <footer>
       <div class="container">
-        <a href="/" class="logo"
-          ><span class="accent">Web</span>
-          <span class="logo-studio">Studio</span>
-        </a>
+        <div class="footer-logo">
+          <a href="/" class="logo"
+            ><span class="accent">Web</span>
+            <span class="logo-studio">Studio</span>
+          </a>
+        </div>
         <div>
           <address>
             м. Київ, пр-т Лесі Українки, 26 <br />
