--- a/portfolio.html
+++ b/portfolio.html
@@ -54,23 +54,23 @@
     </header>
 
     <main>
-      <div class="container">
-        <section class="projects">
+      <section class="projects">
+        <div class="container">
           <div class="menu-filters">
             <ul class="filters">
               <li class="filters-item">
                 <button type="button" class="filters-button">Усі</button>
               </li>
-              <li>
+              <li class="filters-item">
                 <button type="button" class="filters-button">Веб-сайти</button>
               </li>
-              <li>
+              <li class="filters-item">
                 <button type="button" class="filters-button">Додатки</button>
               </li>
-              <li>
+              <li class="filters-item">
                 <button type="button" class="filters-button">Дизайн</button>
               </li>
-              <li>
+              <li class="filters-item">
                 <button type="button" class="filters-button">Маркетинг</button>
               </li>
             </ul>
@@ -146,13 +146,13 @@
               </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <footer>
       <div class="container">
-        <div class="footer-logo">
+        <div class="logo">
           <a href="/" class="logo"
             ><span class="accent">Web</span>
             <span class="logo-studio">Studio</span>
